--- a/css/main.css
+++ b/css/main.css
@@ -1941,7 +1941,7 @@ img:hover {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #c4ff91;
+  background: #ffffb1;
 }
 .links-of-blogroll {
   font-size: 13px;
