--- a/themes/next/source/css/_common/components/sidebar/sidebar-author.styl
+++ b/themes/next/source/css/_common/components/sidebar/sidebar-author.styl
@@ -5,6 +5,10 @@
   max-width: $site-author-image-width;
   height: $site-author-image-height;
   border: $site-author-image-border-width solid $site-author-image-border-color;
+  border-radius: 80px;
+  -webkit-border-radius: 80px;
+  -moz-border-radius: 80px;
+  box-shadow: inset 0 -1px 0 #333sf;
 }
 
 .site-author-name {
