--- a/css/main.css
+++ b/css/main.css
@@ -1293,7 +1293,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #4f1aff;
+  background: #ffe86f;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
